Changed how the sections are split up
I feel like this is a good way to split up the guide. Basic mechanics,
visuals, and level design are all separate issues that different level
creators will struggle with to different extents.

Also I was running out of space to add more sections but don't tell
anyone

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
 	<div class="nav">
 		<ul>
-			<li><a href="#basic-level-creation">Basic level creation</a></li>
-			<li><a href="#adding-decorations">Adding decorations</a></li>
-			<li><a href="#obstacles">Obstacles</a></li>
-			<li><a href="#finishing-touches">Finishing touches</a></li>
+			<li><a href="#basics">The basics</a></li>
+			<li><a href="#visuals">Visuals</a></li>
+			<li><a href="#design">Level design</a></li>
 			<li><a href="#glossary">Glossary</a></li>
 		</ul>
 	</div>
@@ -32,7 +31,7 @@
 			In this guide we will try to cover as many basic functions of the in-game editor as possible. Should you stumble upon something you think is missing, or outdated even. Please do not hesitate to contact us so we can update the guide accordingly.<br><br>
 		</div>
 
-		<a name="basic-level-creation"></a>
+		<a name="basics"></a>
 		<h1>Basic Level Creation</h1>
 		<div class="section">
 			<h2>The Very Basics</h2>
@@ -89,9 +88,6 @@
 
 			You can also select the road piece itself before selecting the first node. When you press enter, the entire road piece will move to so that the two nodes connect.<br><br>
 		</div>
-
-		<a name="finishing-touches"></a>
-		<h1>Finishing touches</h1>
 
 		<div class="section">
 			<h2>Uploading to Steam Workshop</h2>
