Testing different font weights

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="left-image-separator"></div>
 
 	<div class="main-content">
-		<div class="section">
+		<div class="section" style="font-family: Petita Light">
 			<h2>Introduction</h2>
 			The unofficial Distance level editor guidebook is an easy to access way of learning about the many tools available to you in the level editor. But besides describing many of the individual tools and functions in the editor. It also provides you with a step-by-step formula to creating your first level.<br><br>
 
@@ -33,7 +33,7 @@
 
 		<a name="basics"></a>
 		<h1>Basic Level Creation</h1>
-		<div class="section">
+		<div class="section" style="font-family: Petita Medium">
 			<h2>The Very Basics</h2>
 			<div class="big-image">
 				<img class="gfyitem" data-id="UnluckySophisticatedGreathornedowl" data-controls="false" />
