The gizmo buttons are W, E, and R, not Q, W, and E
I was so wrong! So, so wrong! Nooooooooooo

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 			Add a new <b>EmpireSplineRoadStraight</b> to the end of the track. You'll notice that there are green rectangles marking the beginning and end of every road piece. These are <b>track nodes</b>. Select the node at the end of the piece you just added. You can manipulate these in any way that you can manipulate any other object!<br><br>
 
-			There are three different tools you can use to transform objects: the <b>move</b> tool, the <b>rotate</b> tool, and the <b>scale</b> tool. You can switch between these by pressing <b>Q</b>, <b>W</b>, and <b>E</b>, respectively. Try manipulating the nodes in different ways! The tracks will morph to fit the nodes properly. You can also manipulate the nodes between already-placed pieces of track, and it works the same way.<br><br>
+			There are three different tools you can use to transform objects: the <b>move</b> tool, the <b>rotate</b> tool, and the <b>scale</b> tool. You can switch between these by pressing <b>W</b>, <b>E</b>, and <b>R</b>, respectively. Try manipulating the nodes in different ways! The tracks will morph to fit the nodes properly. You can also manipulate the nodes between already-placed pieces of track, and it works the same way.<br><br>
 		</div>
 
 		<div class="section">
@@ -139,15 +139,15 @@
 				</tr>
 				<tr>
 					<td>Move tool</td>
-					<td>Q</td>
-				</tr>
-				<tr>
-					<td>Rotate tool</td>
 					<td>W</td>
 				</tr>
 				<tr>
-					<td>Scale tool</td>
+					<td>Rotate tool</td>
 					<td>E</td>
+				</tr>
+				<tr>
+					<td>Scale tool</td>
+					<td>R</td>
 				</tr>
 				<tr>
 					<td>Copy</td>
