--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			Position the camera in the editor to be a good preview of the map! This will be used as the thumbnail for the level on the workshop. Once you've done this, click Save and Publish to Steam Workshop in the menu on the right. Also, be sure to edit the description for the level once it's published! Nobody wants to play a track that says it's "an awesome community level."
 		</div>
 
-		<a name="glossary"></a>
+		<span id='glossary'></span>
 		<h1>Glossary</h1>
 
 		<div class="section">
