--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Distance Unofficial Level Editor Guide</title>
-	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
@@ -11,12 +10,10 @@
 	</div>
 
 	<div class="nav">
-		<ul>
-			<li><a data-scroll href="#basics">The basics</a></li>
-			<li><a data-scroll href="#visuals">Visuals</a></li>
-			<li><a data-scroll href="#design">Level design</a></li>
-			<li><a data-scroll href="#glossary">Glossary</a></li>
-		</ul>
+		<a data-scroll href="#basics">The basics</a>
+		<a data-scroll href="#visuals">Visuals</a>
+		<a data-scroll href="#design">Level design</a>
+		<a data-scroll href="#glossary">Glossary</a>
 	</div>
 
 	<div class="left-image-separator"></div>
