Added the decorations section
It needs a gfy

--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
 		<h1>Visuals</h1>
 		<div class="mininav">
 			<a data-scroll href="#visuals1">Themes</a>
-			<a data-scroll href="#visuals2">Colors</a>	
+			<a data-scroll href="#visuals2">Colors</a>
+			<a data-scroll href="#visuals3">Decorations</a>
 		</div>
 
 		<span id="visuals1"></span>
@@ -167,6 +168,16 @@
 			As you can see a well thought out theme will not only make your level prettier. It can also help you tell a story or set the mood.<br><br>
 
 			The best themes are the ones tailored for the level they are applied to. So take your time and get the theme just right, so that you feel it accomplishes what you want with the level.
+		</div>
+
+		<span id="visuals3"></span>
+		<div class="section">
+			<h2>Decorations</h2>
+			Let's start by placing a lamp on the track. First move the cursor so it's on the side (or railing) of the track you want the lamp to be on. Add an <b>EmpireLamp</b> from the "Decorations" folder. Once you placed the lamp make sure it looks like its actually connected to the track! Use Alt + S to rotate it correctly, and use the movement gizmos to get the alignment just right. Once it looks like it's actually connected to the track, attach it (<b>Shift + A</b>). Once we have done this it will follow the road if we move it and we can easily duplicate it just like the checkpoints.
+
+			<div class="infobox">
+				Once you attach an object to the track, you can press <b>F</b> to flip it to the other side of the track. This is really useful for putting lamps on the other side of the track. Use this in combination with duplicating them to easily place lamps throughout the level.
+			</div>
 		</div>
 
 		<span id='glossary'></span>
