Added "colors" and "buildings" sections
Also, I started thinking about how the level design topic is going to
go.

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 			<a data-scroll href="#visuals1">Themes</a>
 			<a data-scroll href="#visuals2">Colors</a>
 			<a data-scroll href="#visuals3">Decorations</a>
+			<a data-scroll href="#visuals4">Buildings</a>
 		</div>
 
 		<span id="visuals1"></span>
@@ -170,6 +171,17 @@
 			The best themes are the ones tailored for the level they are applied to. So take your time and get the theme just right, so that you feel it accomplishes what you want with the level.
 		</div>
 
+		<span id="visuals2"></span>
+		<div class="section">
+			<h2>Colors</h2>
+			Utilizing colours is an important part of level editing in Distance. All of the objects are made up of different components, some of which represent behavior and some of which are physical components. Many of the physical components have color properties you can change. The different properties are:
+			<ul>
+				<li><b>Color</b>: This usually refers to the largest continuous part of the object. In the case of buildings its a good idea to set this to something thats easy on the eyes, as this will be one of the most prominent colors in your level.</li>
+				<li><b>Spec color</b>: This is the reflective value. Its layered on top of the "color" of the object and is only shown relative to what angle the player camera is looking at it from.</li>
+				<li><b>Emit color</b>: This slot often refers to a "glowing" part of the object, and its a really good place to enforce the bright and most prominent colors of your overall theme.</li>
+			</ul>
+		</div>
+
 		<span id="visuals3"></span>
 		<div class="section">
 			<h2>Decorations</h2>
@@ -178,6 +190,26 @@
 			<div class="infobox">
 				Once you attach an object to the track, you can press <b>F</b> to flip it to the other side of the track. This is really useful for putting lamps on the other side of the track. Use this in combination with duplicating them to easily place lamps throughout the level.
 			</div>
+		</div>
+
+		<span id="visuals4"></span>
+		<div class="section">
+			<h2>Bulidings</h2>
+			Adding buildings is simple. First, go to the <b>"Buildings"</b> folder in the library. Once you've found the building you want to add, double click it to spawn it at the cursor location. You can then move and rotate the building to where you want them using the move, rotate, and scale gizmos.
+
+			<div class="infobox">
+				When placing buildings try to think of them as a background in a painting. Try moving the camera so you see what the car will approximately see, and then place your buildings so they create a "scenery" for the car to drive through. Also, you can't have a lot of blank "canvas" in your painting. So try testing the track and look for empty spots you could fill out with buildings. Striking a good balance between too many or too few buildings is important!
+			</div>
+		</div>
+
+		<span id='design'></span>
+		<h1>Level Design</h1>
+		<div class="mininav">
+			<a data-scroll href="#design1">Introduction</a>
+			<a data-scroll href="#design1">Themes</a>
+			<a data-scroll href="#design1">Difficulty</a>
+			<a data-scroll href="#design1">Heat Management</a>
+			<a data-scroll href="#design1">Skips</a>
 		</div>
 
 		<span id='glossary'></span>
