--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Distance Unofficial Level Editor Guide</title>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
@@ -32,7 +33,7 @@
 		<h1>Basic Level Creation</h1>
 		<div class="mininav">
 			<a data-scroll href="#basics1">The Very Basics</a>
-			<a data-scroll href="#basics2">Checkpoints</a>	
+			<a data-scroll href="#basics2">Checkpoints</a>
 			<a data-scroll href="#basics3">Track Nodes</a>
 			<a data-scroll href="#basics4">Multiple Paths</a>
 			<a data-scroll href="#basics5">Obstacles</a>
