--- a/index.html
+++ b/index.html
@@ -203,6 +203,25 @@
 			</div>
 		</div>
 
+		<span id="visuals5"></span>
+		<div class="section">
+			<h2>Performance</h2>
+			Be careful when decorating your level. Putting too many objects in a level will make it lose FPS (frames per second). That's why it's generally a good idea to always have the frames per second counter showing. To enable it press <b>ALT + F10</b>.<br/><br/>
+
+			Loss of frames can happen for multiple reasons:
+			<ul>
+				<li><b>Placing too many objects in a level overall.</b> It won't matter if they are not always seen or within the visible draw distance. Too many objects will lower the FPS, so try to pace yourself.</li>
+				<li><b>Too many objects in the visible frame.</b> On the other hand loss of frames can also occur from having the game draw too much stuff at once. If you ever encountered that a level suddenly played at a smooth 60 FPS and then dropped to 20, that's because there was just a section of the level where there was too much stuff going on, but now that the game doesn't have to draw it anymore, everything is fine.</li>
+				<li><b>Too many light sources.</b> Light casts shadows (for those who have shadows enabled anyways), and having to draw too many shadows at once can impact your FPS.</li>
+				<li><b>Too many anything technical.</b> Generally objects that move or have a technical function (like lasers fx) will impact your FPS if you put too many of them in your level.</li>
+			</ul>
+
+			Caring about your FPS is very important. Especially because a lot of people play distance on different computers. One level that works 100% flawlessly on one computer might be completely un-playable on another. So even if you are just getting a tiny decrease in your FPS after adding 200 buildings to your level, it's still worth considering decreasing that again if you are on a good computer.</br></br>
+
+			Its hard to set a bar for what's an acceptable FPS in any given community level. Just remember, playability MUST come first.
+
+		</div>
+
 		<span id='design'></span>
 		<h1>Level Design</h1>
 		<div class="mininav">
